fix: overflow images

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -16,4 +16,9 @@ $body-font-family: 'IRANSans';
 
 ol {
     list-style-position: inside;
- }
+}
+
+img {
+    max-width: 100% !important;
+    height: auto;
+}
